--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
+target/
+build/
+bin/
+Thumbs.db
+.DS_Store
+.project
+.classpath
+.springBeans
+.DS_Store
+ivy*.xml
+*.iml
+*.ipr
+*.iws
 *.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
+.idea
+.settings/
+.gradle/
+**/ivy*.xml
+**/.gradle
+**/.classpath
+**/.project
+**/.settings
+**/.springBeans
+**/classes
+**/build
+**/bin
+**/target
