--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ def loadConfiguration() {
 }
 
 ext {
-    flatReposLocation = file('/repos').absolutePath
+    flatReposLocation = file('./repos').absolutePath
 }
 
 subprojects {
@@ -25,7 +25,7 @@ subprojects {
     apply plugin: 'maven'    
     apply plugin: 'eclipse-wtp'
     
-    group = 'com.linkedhole.platform.infra'
+    group = 'com.linkedhole.platform.shared'
     
     // JDK 7 compatibility
     sourceCompatibility=1.7
@@ -50,7 +50,7 @@ subprojects {
         mavenCentral()
         maven { url 'http://repo.springsource.org/libs-milestone' }
         maven { url 'http://repo.springsource.org/plugins-release' }
-        flatDir { dirs flatReposLocation }
+        flatDir { dirs "$flatReposLocation/lib" }
         // maven { url "$config.nexus.publicRepository" }
     }
     
@@ -66,7 +66,7 @@ subprojects {
         }
         **/
         repositories {
-            flatDir { dirs flatReposLocation }
+            flatDir { dirs "$flatReposLocation/lib" }
        }
     }
     
@@ -216,7 +216,7 @@ subprojects {
         }
         if (taskGraph.hasTask(jar)) { 
             jar.manifest {
-                attributes 'Implementation-Title': 'platform-infra',
+                attributes 'Implementation-Title': 'platform-shared',
                            'Implementation-Version': version,
                            'Built-By': System.getProperty('user.name'),
                            'Built-Date': new Date(),
