Convert Dynamic Properties to extra properties. Check http://forums.gradle.org/gradle/topics/6caj90zrfqr0l Moved shared applications(shared-application, shared-support, shared-web-application) artifactId and version properties to uploadArchive.repositories.mavenDeployer.pom (They're not dynamic property target.)

--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ defaultTasks 'clean', 'build'
 loadConfiguration()
 
 def loadConfiguration() {
-    def environment = hasProperty('spring.profiles.active') ? get('spring.profiles.active') : 'dev'
-    setProperty 'environment', environment
+    ext {
+        environment = hasProperty('spring.profiles.active') ? get('spring.profiles.active') : 'dev'
+        configFile = file('environment.groovy')
+        config = new ConfigSlurper(environment).parse(configFile.toURL())
+    }
+    setProperty 'environment', ext.environment
     println "####### Environment is set to [$environment] #######"   
-    def configFile = file('environment.groovy')
-    def config = new ConfigSlurper(environment).parse(configFile.toURL())    
-    setProperty 'config', config
+    setProperty 'config', ext.config
 }
 
 ext {
@@ -34,7 +36,6 @@ subprojects {
     
     // 정보 설정
     ext {    
-        
         aspectjVersion = "1.6.10"
         slf4jVersion = "1.6.6"
         logBackVersion = "1.0.7"
@@ -79,8 +80,8 @@ subprojects {
         dependsOn uploadArchives    
     }
         
-    sourceSets.main.classesDir = new File("./build/classes")
-    sourceSets.test.classesDir = new File("./build/testClasses")
+    sourceSets.main.output.classesDir = new File("./build/classes")
+    sourceSets.test.output.classesDir = new File("./build/testClasses")
     
     eclipse {
         classpath {
