--- a/shared-support/build.gradle
+++ b/shared-support/build.gradle
@@ -3,5 +3,9 @@ description = 'Platform Shared Support (shared)'
 
 defaultTasks 'clean', 'build', 'uploadArchives'
 
-artifactId = 'shared-support'
-version = "1.0"
+uploadArchives {
+    repositories.mavenDeployer {
+        pom.version = "1.0"
+        pom.artifactId = 'shared-support'
+    }
+}
