--- a/shared-web-application/build.gradle
+++ b/shared-web-application/build.gradle
@@ -3,5 +3,9 @@ description = 'Platform Shared Web Application (shared)'
 
 defaultTasks 'clean', 'build', 'uploadArchives'
 
-artifactId = 'shared-web-application'
-version = "1.0"
+uploadArchives {
+    repositories.mavenDeployer {
+        pom.version = "1.0"
+        pom.artifactId = 'shared-web-application'
+    }
+}
